# Mem0ai---Rust

./: Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
hf-hub-0.3.2/src/api/: sync.rs  tokio.rs
src/: config.rs  dashboard.rs  db.rs  embedding.rs  interactive.rs  main.rs  mcp.rs
