[package]
name = "mem0_rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glowrs = "0.4.1"
half = "=2.4.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
tiny_http = "0.12"

[patch.crates-io]
hf-hub = { path = "../hf-hub-0.3.2" }
