[package]
name = "mem0_rust_server"
version = "1.0.0"
edition = "2021"
description = "Mem0 Local — Offline, in-process, long-term memory layer for AI agents. Built entirely in Rust. No Docker, no API keys required."
authors = ["Mem0 Rust Contributors"]
license = "MIT"
repository = "https://github.com/mem0ai/mem0"
keywords = ["memory", "ai", "mcp", "embeddings", "rag"]
categories = ["command-line-utilities", "database"]


[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glowrs = "0.4.1"
half = "=2.4.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
tiny_http = "0.12"


[patch.crates-io]
hf-hub = { path = "./hf-hub-0.3.2" }
